[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l8nc"
version = "0.1.5"
description = "Multi-target continuous ping monitor for network troubleshooting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ping", "network", "monitor", "latency", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "icmplib>=3.0",
    "plotext>=5.2",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
l8nc = "l8nc.cli:main"
